# ItemFilterProxyModel

./: .gitignore  CMakeLists.txt  Readme.md  qt6.natvis
example/: CMakeLists.txt  ExampleItemFilterProxyModel.cpp  ExampleItemFilterProxyModel.h  ExampleItemModel.cpp  ExampleItemModel.h  ExampleTreeView.cpp  ExampleTreeView.h  ExampleWidget.cpp  ExampleWidget.h  main.cpp
include/: ItemFilterProxyModel.h  ItemFilterProxyModel_new.h  ItemFilterProxyModel_old.h
include/ItemFilterProxyModel/: ItemFilterProxyModel.h
include/structure_proxy_model/: StructureProxyModel.h
src/: ItemFilterProxyModel.cpp  ItemFilterProxyModel.h  ItemFilterProxyModelPrivate.cpp  ItemFilterProxyModelPrivate.h  ItemFilterProxyModel_new.cpp  ItemFilterProxyModel_old.cpp  ProxyIndexInfo.cpp  ProxyIndexInfo.h  StructureProxyModel.cpp  StructureProxyModelPrivate.cpp  StructureProxyModelPrivate.h  main.cpp
tests/: CMakeLists.txt  ColumnIteratorTest.cpp  ColumnIteratorTest.h  main.cpp
